# jad

./: .gitignore  CLAUDE.md  package-lock.json  package.json  pyproject.toml  tsconfig.headless.json  tsconfig.json  webpack.config.js
dist-headless/: jad-region.js  jad.js  loadout.js
dist-headless/headless/: bootstrap.js  env.js  main.js  mocks.js
public/: index.html
python/data/: __init__.py
python/jad/: __init__.py  actions.py  config.py  types.py
python/jad/env/: __init__.py  gym_env.py  observations.py  process_wrapper.py  vec_normalize.py
python/models/: __init__.py  lstm_policy.py
python/scripts/: serve_agent.py  test_env.py  train_bc.py  train_ppo.py
python/training/: __init__.py
rl/: __init__.py  agent.py  config.py  env.py  env_process_wrapper.py  jad_gym_env.py  jad_gymnasium_env.py  main.py  model.py  normalizer.py  observations.py  play.py  pyproject.toml  rewards.py  simple_agent.py  simple_train.py  test_env.py  test_overfit.py  train.py  train_sb3.py  utils.py  vec_normalize.py  ws_server.py
src/: agent-controller.ts  config.ts  healer.ts  index.ts  jad-region.ts  jad.ts  loadout.ts
src/browser/: agent-controller.ts  agent-ui.ts  agent-websocket.ts  index.ts
src/browser/recording/: action-recorder.ts  data-recorder.ts  index.ts  recording-controller.ts
src/core/: actions.ts  episode-state.ts  healer.ts  index.ts  jad-region.ts  jad.ts  loadout.ts  observation.ts  rewards.ts  types.ts  utils.ts
src/core/reward/: helpers.ts  index.ts  reward-functions.ts
src/headless/: bootstrap.ts  env.ts  main.ts  mocks.ts
