[project]
name = "jad-rl"
version = "0.1.0"
description = "Reinforcement learning agent for Jad prayer switching"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "numpy>=2.4.0",
    "rich>=14.2.0",
    "sb3-contrib>=2.7.1",
    "stable-baselines3>=2.7.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "websockets>=12.0",
]
